# cpp_send_img_to_python

./: ApiShare_dll.cpp  CMakeLists.txt  Makefile  README.md  client  py_client.py  py_send.py  receive_example.cpp  send  send_example.cpp
